# work-tools-rust

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PERMISSIONS_FIXED.md  QUICK_START.txt  README.md  TARGET_PERMISSIONS_FIX.md  fix-and-start.sh  package-lock.json  package.json  test-all-plugins.sh  test-auth-plugin.sh  test-password-manager.sh  test-plugin-store.sh  test-plugin-validation.sh  test_plugin_manager.rs
.claude/: settings.json
docs/: CLEANUP_OPTIMIZATION_GUIDE.md  OPTIMIZATION_QUICKREF.md  OPTIMIZATION_SUMMARY.md  README.md  architecture.md  contributing.md  design-token-reference.md  getting-started.md  plugin-api-reference.md  plugin-development.md  release-process.md  ui-optimizations-2026-03-03.md  user-guide.md
plugins/: README-INSTALL.md  build-all.ps1  build-all.sh
plugins/api-doc/: Cargo.toml  manifest.json
plugins/api-doc/assets/: index.html  main.js  styles.css
plugins/api-doc/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
plugins/api-doc/frontend/src/: App.css  App.tsx  index.css  types.ts
plugins/api-doc/frontend/src/components/: ApiCard.tsx  ConfigView.tsx  ControllerPanel.tsx  DetailPanel.tsx  ExportPanel.tsx  HistoryList.tsx  PreviewView.tsx  SelectView.tsx  StepHeader.tsx
plugins/api-doc/src/: lib.rs  storage.rs
plugins/api-doc/src/exporter/: html.rs  markdown.rs  mod.rs  word.rs
plugins/api-doc/src/models/: api_info.rs  config.rs  mod.rs
plugins/api-doc/src/parser/: annotation.rs  mock.rs  mod.rs  type_resolver.rs
plugins/auth-plugin/: Cargo.toml  libauth_plugin.dylib  manifest.json
plugins/auth-plugin/assets/: index.html  main.js  styles.css
plugins/auth-plugin/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/auth-plugin/frontend/src/: App.css  App.tsx  main.tsx
plugins/auth-plugin/src/: lib.rs  main.rs
plugins/cron-tools/: Cargo.toml  manifest.json
plugins/cron-tools/assets/: index.html  main.js  styles.css
plugins/cron-tools/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
plugins/cron-tools/frontend/src/: App.css  App.tsx
plugins/cron-tools/src/: lib.rs
plugins/db-doc/: Cargo.toml  manifest.json
plugins/db-doc/assets/: index.html  main.js  styles.css
plugins/db-doc/assets/assets/: index-D3FO0Je4.js  index-YrfHN3zI.css
plugins/db-doc/frontend/: index.html  package-lock.json  package.json  vite.config.ts
plugins/db-doc/frontend/src/: App.css  App.tsx  index.css
plugins/db-doc/src/: crypto.rs  lib.rs  storage.rs
plugins/db-doc/src/database/: extractor.rs  mod.rs  mysql.rs  postgres.rs
plugins/db-doc/src/exporter/: html.rs  markdown.rs  mod.rs  pdf.rs  word.rs
plugins/db-doc/src/models/: column.rs  connection.rs  mod.rs  table.rs
plugins/k8s-forward/: Cargo.toml  manifest.json
plugins/k8s-forward/assets/: index.html  main.js  styles.css
plugins/k8s-forward/frontend/: index.html  package-lock.json  package.json  vite.config.ts
plugins/k8s-forward/frontend/src/: App.css  App.tsx  main.tsx  types.ts
plugins/k8s-forward/frontend/src/components/: TabHttpProxy.tsx  TabK8sForward.tsx  TabSshForward.tsx
plugins/k8s-forward/src/: crypto.rs  http_proxy.rs  kuboard_client.rs  lib.rs  models.rs  ssh_service.rs
plugins/object-storage/: Cargo.toml  manifest.json
plugins/object-storage/assets/: index.html  main.js  styles.css
plugins/object-storage/frontend/: index.html  package-lock.json  package.json  tsconfig.json
plugins/object-storage/frontend/src/: App.css  App.tsx  main.tsx  models.ts  types.ts
plugins/object-storage/src/: cos.rs  crypto.rs  lib.rs  models.rs  oss.rs  provider.rs
plugins/object-storage/tests/: oss_integration_test.rs
plugins/password-manager/: Cargo.toml  README.md  libpassword_manager.dylib  manifest.json
plugins/password-manager/assets/: index.html  main.js  styles.css
plugins/password-manager/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/password-manager/frontend/src/: App.css  App.tsx  PasswordManager.types.ts  main.tsx  types.ts
plugins/password-manager/src/: crypto.rs  lib.rs  main.rs
plugins/redis-client/: Cargo.toml  manifest.json
plugins/redis-client/assets/: index.html  main.js  styles.css
plugins/redis-client/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/redis-client/frontend/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
plugins/redis-client/frontend/src/components/: ConnectView.tsx  ConnectionBar.tsx  ConnectionManager.tsx  ContextMenu.tsx  DetailPanel.tsx  DetailToolbar.tsx  KeyPanel.tsx  KeyTree.tsx  Toast.tsx  WorkspaceView.tsx
plugins/redis-client/frontend/src/components/modals/: ConnectionEdit.tsx  DeleteConfirm.tsx
plugins/redis-client/frontend/src/components/viewers/: HashViewer.tsx  HexViewer.tsx  ListViewer.tsx  SetViewer.tsx  StringViewer.tsx  ZSetViewer.tsx
plugins/redis-client/frontend/src/hooks/: useConnection.ts  useKeyDetail.ts  useKeys.ts
plugins/redis-client/frontend/src/utils/: json.ts  tree.ts
plugins/redis-client/src/: connection.rs  hex.rs  lib.rs  operations.rs  ssh_tunnel.rs  tests.rs
plugins/timestamp-converter/: Cargo.toml  manifest.json
plugins/timestamp-converter/assets/: index.html  main.js  styles.css
plugins/timestamp-converter/frontend/: index.html  package-lock.json  package.json
plugins/timestamp-converter/frontend/src/: App.css  App.tsx
plugins/timestamp-converter/src/: lib.rs
release/: BUILD_SUMMARY.md  README.md  VERSION.txt
scripts/: QUICKREF.md  README-BUILD.md  README.md  build-plugins.ps1  build-plugins.sh  check-env.ps1  check-env.sh
tauri-app/: README.md  debug-import.html  index.html  package-lock.json  (+4 more)
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: commands.rs  config.rs  crypto.rs  lib.rs  logger.rs  main.rs  paths.rs  plugin_manager.rs  plugin_package.rs  plugin_registry.rs  tray.rs
(+216 files in other folders)
