[workspace]
members = [
    "shared/types",
    "shared/plugin-api",
    "plugins/password-manager",
    "plugins/auth-plugin",
    "plugins/json-tools",
    "plugins/text-diff",
    "plugins/db-doc",
    "plugins/db-router",
    "plugins/k8s-forward",
    "plugins/object-storage",
    "plugins/timestamp-converter",
    "plugins/cron-tools",
    "plugins/redis-client",
    "plugins/api-doc",
    "tauri-app/src-tauri",
]
resolver = "2"
exclude = ["tauri-app"]

[workspace.package]
version = "1.0.0"
edition = "2021"
