[package]
name = "auth-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
worktools-rpc-protocol = { path = "../../shared/rpc-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
urlencoding = "2.1"
