[package]
name = "auth-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
worktools-rpc-protocol = { path = "../../shared/rpc-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
urlencoding = "2.1"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sha1 = "0.10"
hmac = "0.12"
base32 = "0.5"
