[package]
name = "auth-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worktools-plugin-api = { path = "../../shared/plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sha1 = "0.10"
hmac = "0.12"
base32 = "0.5"
dirs = "6.0.0"
rand = "0.10.0"
