[package]
name = "db-doc"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 插件 API
worktools-plugin-api = { path = "../../shared/plugin-api" }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 数据库驱动 (编译时检查)
sqlx = { version = "0.7", features = ["mysql", "postgres", "runtime-tokio-rustls", "chrono"] }

# 模板引擎
handlebars = "5.1"

# DOCX 生成
quick-xml = "0.31"
zip = "0.6"

# PDF 生成
printpdf = "0.6"

# 加密 (复用密码管理器方案)
aes = "0.8"
sha2 = "0.10"
hex = "0.4"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
async-trait = "0.1"
once_cell = "1.19"
tracing = "0.1"
