[package]
name = "k8s-forward"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worktools-plugin-api = { path = "../../shared/plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "net", "io-util"] }
reqwest = { version = "0.12", features = ["cookies", "redirect"] }
ssh2 = "0.9"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
aes = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
