[package]
name = "k8s-forward"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 插件 API
worktools-plugin-api = { path = "../../shared/plugin-api" }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "net", "io-util"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["cookies"] }

# SSH 连接
ssh2 = "0.9"

# HTTP 代理
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# 加密
aes = "0.8"
sha2 = "0.10"
hex = "0.4"

# 工具库
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
