[package]
name = "object-storage"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worktools-plugin-api = { path = "../../shared/plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
quick-xml = { version = "0.36", features = ["serialize"] }
md5 = "0.7"
dirs = "5"
