[package]
name = "password-manager"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "password-manager"
path = "src/main.rs"

[dependencies]
worktools-shared-types = { path = "../../shared/types" }
worktools-rpc-protocol = { path = "../../shared/rpc-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
