[package]
name = "work-tools"
version = "1.0.0"
description = "Work Tools Platform - Rust Edition"
authors = ["zjhy"]
edition = "2021"
default-run = "work-tools"

[lib]
name = "work_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "work-tools"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
tracing-appender = "0.2"
directories = "6.0.0"
dirs = "6.0.0"
notify = "8.2.0"
rand = "0.10.0"
aes = "0.8"
sha2 = "0.10"
hex = "0.4"
libloading = "0.9.0"
zip = "8.2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
opener = "0.8.4"

# 本地依赖
worktools-shared-types = { path = "../../shared/types" }
worktools-plugin-api = { path = "../../shared/plugin-api" }
